--- a/app/leaderboard.html
+++ b/app/leaderboard.html
@@ -3,6 +3,11 @@
 </head>
 <body>
 <h1>Leaderboard</h1>
+<p>
+  <!-- this template is free when we '$meteor add' the accounts-ui package-->
+  {{> loginButtons}}
+</p>
+
 {{> leaderboard}}  <!-- including a template into our html -->
 </body>
 
@@ -10,24 +15,29 @@
 <!--- Templates' logic --->
 
 <template name="leaderboard">
-  {{> addPlayerForm}}
-  <button class="remove"> Remove Player </button>
-  <ul>
-    <!-- Check that a valid player has already been selected/clicked -->
-    {{#if selectedPlayer}}
-    <!-- display the name value of the doc returned by selectedPlayer template helper -->
-    <li>Selected Player: {{selectedPlayer.name}}</li>
-    <li>
-      <button class="increment">Give 5 Points</button>
-      <button class="decrement">Take 5 Points</button>
-    </li>
-    {{/if}}
-    <!-- iter. thru the iterable returned by the Template.leaderboard.player function -->
-    {{#each player}}
-    <!-- do something with each document returned by the iterable-->
-    <li class="player {{selectedClass}}">{{name}}: {{score}}</li>
-    {{/each}}
-  </ul>
+  <!-- we get currentUser bool function for free with the accounts-ui package-->
+  {{#if currentUser}}
+    {{> addPlayerForm}}
+    <button class="remove"> Remove Player</button>
+    <ul>
+      <!-- Check that a valid player has already been selected/clicked -->
+      {{#if selectedPlayer}}
+      <!-- display the name value of the doc returned by selectedPlayer template helper -->
+      <li>Selected Player: {{selectedPlayer.name}}</li>
+      <li>
+        <button class="increment">Give 5 Points</button>
+        <button class="decrement">Take 5 Points</button>
+      </li>
+      {{/if}}
+      <!-- iter. thru the iterable returned by the Template.leaderboard.player function -->
+      {{#each player}}
+      <!-- do something with each document returned by the iterable-->
+      <li class="player {{selectedClass}}">{{name}}: {{score}}</li>
+      {{/each}}
+    </ul>
+  {{else}}
+    <p>You must be logged in to view this content.</p>
+  {{/if}}
 </template>
 
 <template name="addPlayerForm">
